package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"time"

	pb "seo_service/seo"

	"google.golang.org/grpc"
)

const (
	port = ":50060"
)

// server is used to implement seo.SEOServiceServer.
type server struct {
	pb.UnimplementedSEOServiceServer
}

// SubmitSitemap implements seo.SEOServiceServer
func (s *server) SubmitSitemap(ctx context.Context, in *pb.SitemapRequest) (*pb.SEOResponse, error) {
	log.Printf("Received Sitemap Submission Request for URL: %s", in.GetSitemapUrl())

	// --- 1. Submission Logic (Placeholder) ---
	// In a real system, this would use the Google Search Console API, Bing Webmaster API, etc.
	
	for _, engine := range in.GetSearchEngines() {
		log.Printf("Simulating submission to %s...", engine)
		time.Sleep(50 * time.Millisecond) // Simulate API call
	}

	return &pb.SEOResponse{
		Success: true,
		Message: fmt.Sprintf("Sitemap successfully submitted to %d search engines.", len(in.GetSearchEngines())),
	}, nil
}

// SubmitAppStoreMetadata implements seo.SEOServiceServer
func (s *server) SubmitAppStoreMetadata(ctx context.Context, in *pb.AppStoreRequest) (*pb.SEOResponse, error) {
	log.Printf("Received App Store Metadata Submission Request for App: %s (Store: %s)", in.GetAppId(), in.GetStore())

	// --- 2. ASO Submission Logic (Placeholder) ---
	// This would use the App Store Connect API (Apple) or Google Play Developer API.
	
	log.Printf("Simulating ASO submission for version %s with %d keywords...", in.GetVersion(), len(in.GetKeywords()))
	time.Sleep(100 * time.Millisecond) // Simulate API call

	return &pb.SEOResponse{
		Success: true,
		Message: fmt.Sprintf("Metadata for version %s successfully submitted to %s.", in.GetVersion(), in.GetStore()),
	}, nil
}

func main() {
	lis, err := net.Listen("tcp", port)
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}
	
	s := grpc.NewServer()
	pb.RegisterSEOServiceServer(s, &server{})
	
	log.Printf("SEO/ASO server listening at %v", lis.Addr())
	
	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}
}
