/**
 * PROFITHACK AI - SEO/ASO Submission Service (Node.js gRPC)
 * Automated sitemap submission & app store optimization
 * Port: 50060 | Growth marketing automation
 */

import * as grpc from '@grpc/grpc-js';
import * as protoLoader from '@grpc/proto-loader';
import path from 'path';

const PROTO_PATH = path.join(process.cwd(), 'grpc_services/seo_service/seo.proto');

// Load the protobuf
const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true,
});

const seoProto = grpc.loadPackageDefinition(packageDefinition).seo as any;

/**
 * SubmitSitemap RPC Implementation
 * Submits sitemap to Google, Bing, Yandex, Baidu
 */
function submitSitemap(call: any, callback: any) {
  const { sitemap_url, search_engines } = call.request;
  
  console.log(`üîç Sitemap Submission: ${sitemap_url}`);
  console.log(`   Engines: ${search_engines.join(', ')}`);
  
  // --- Submission Logic (Mock) ---
  // In production:
  // - Google Search Console API
  // - Bing Webmaster Tools API
  // - Yandex.Webmaster API
  // - Baidu Webmaster Tools
  
  const startTime = Date.now();
  
  // Simulate API calls to each search engine (50ms each)
  setTimeout(() => {
    const latency = Date.now() - startTime;
    
    console.log(`‚úÖ Sitemap submitted to ${search_engines.length} engines | ${latency}ms`);
    
    callback(null, {
      success: true,
      message: `Sitemap successfully submitted to ${search_engines.length} search engines.`,
    });
  }, search_engines.length * 50);
}

/**
 * SubmitAppStoreMetadata RPC Implementation
 * App Store Optimization (ASO) for Apple + Google
 */
function submitAppStoreMetadata(call: any, callback: any) {
  const { app_id, version, description, keywords, store } = call.request;
  
  console.log(`üì± ASO Submission: ${app_id} v${version}`);
  console.log(`   Store: ${store} | Keywords: ${keywords.length}`);
  
  // --- ASO Submission Logic (Mock) ---
  // In production:
  // - App Store Connect API (Apple)
  // - Google Play Developer API
  // - Automated metadata optimization
  
  setTimeout(() => {
    console.log(`‚úÖ Metadata submitted to ${store} | Version: ${version}`);
    
    callback(null, {
      success: true,
      message: `Metadata for version ${version} successfully submitted to ${store}.`,
    });
  }, 100);
}

/**
 * Start the SEO/ASO gRPC Server
 */
export function startSEOService(port: number = 50060) {
  const server = new grpc.Server();
  
  server.addService(seoProto.SEOService.service, {
    SubmitSitemap: submitSitemap,
    SubmitAppStoreMetadata: submitAppStoreMetadata,
  });
  
  server.bindAsync(
    `0.0.0.0:${port}`,
    grpc.ServerCredentials.createInsecure(),
    (err, boundPort) => {
      if (err) {
        console.error('‚ùå Failed to start SEO Service:', err);
        return;
      }
      
      console.log('üîç PROFITHACK AI - SEO/ASO Submission Service (gRPC)');
      console.log(`   Port: ${boundPort}`);
      console.log(`   Features: Sitemap submission, ASO automation`);
      console.log(`   Engines: Google, Bing, Yandex, Baidu, Apple, Google Play`);
    }
  );
  
  return server;
}

// Start if run directly (ES module check)
if (import.meta.url === `file://${process.argv[1]}`) {
  startSEOService();
}
